Introduce Camunda7 adapter
